dynamically_typed_tests/invalid/multiple/multiCaseSensitivity.wacc
# variable names are case sensitive in all possible ways

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  number = 42 ;
  println NUMBER ;

  INDEX = 0 ;
  println index ;

  miXed = 3 ;
  println MIxED
end
